# hpc

./: Cargo.toml  README.md
data/: primes_benchmark.csv
